--- a/Min Side/CSS/log.css
+++ b/Min Side/CSS/log.css
@@ -2,34 +2,13 @@
     margin: 0;
     padding: 0;
 }
+
 body{
     min-height: 100vh;
     position: relative;
     overflow: hidden;
     font-family: 'Poppins', sans-serif;
+    background-color: #1e232a;
 }
 
-.container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px;
-}
 
-.day {
-    width: 80%;
-    max-width: 600px;
-    margin-bottom: 20px;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-}
-
-.day h2 {
-    margin-top: 0;
-}
-
-.day ul {
-    list-style-type: disc;
-    padding-left: 20px;
-}
