--- a/Min Side/CSS/log.css
+++ b/Min Side/CSS/log.css
@@ -29,11 +29,11 @@ body {
 
 .search-container input {
     width: 100%;
-    max-width: 600px; /* Begrens bredden til søkefeltet */
+    max-width: 675px; /* Begrens bredden til søkefeltet */
     padding: 10px;
     border: none;
     border-radius: 5px;
-    font-size: 16px;
+    font-size: 1.1rem;
     outline: none;
 }
 
@@ -79,4 +79,22 @@ body {
     .log {
         width: 100%;
     }
+}
+
+.dropdown-filter {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-filter select {
+    padding: 5px;
+    border: none;
+    border-radius: 5px;
+    background-color: #f1f1f1;
+    height: 40px;
+    font-size: 1.1rem;
+}
+
+.dropdown-filter:hover select {
+    background-color: #ddd;
 }
