--- a/Min Side/CSS/log.css
+++ b/Min Side/CSS/log.css
@@ -10,7 +10,6 @@ body {
     font-family: 'Poppins', sans-serif;
     background-color: #1e232a;
     color: #ffffff;
-    padding: 0 20px;
 }
 
 /* Search Bar */
@@ -64,8 +63,14 @@ body {
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
 }
 
+.log h6 {
+    margin-top: -15px;  /* Pulls h6 closer to h3 */
+    margin-bottom: 15px;  /* Adds space between h6 and paragraph */
+    color: rgba(255, 255, 255, 0.6);
+}
+
 .log h3 {
-    font-size: 18px;
+    font-size: 1.5rem;
     margin-bottom: 10px;
 }
 
@@ -90,11 +95,11 @@ body {
     padding: 5px;
     border: none;
     border-radius: 5px;
-    background-color: #f1f1f1;
+    background-color: #ffffff;
     height: 40px;
     font-size: 1.1rem;
 }
 
-.dropdown-filter:hover select {
-    background-color: #ddd;
+.dropdown-filter:hover select option {
+    background-color: #f1f1f1;
 }
