--- a/Min Side/CSS/FotoSerie.css
+++ b/Min Side/CSS/FotoSerie.css
@@ -5,16 +5,12 @@
 
 body{
     min-height: 100vh;
-    background-color: rgb(197, 189, 189);
-    background-image: linear-gradient(to bottom, rgb(197, 189, 189), rgb(30, 30, 30));
-    background-size: cover; /* Fikserer bildet i midten av siden*/
-    background-repeat: no-repeat;
-    background-position: center;
+    background: linear-gradient(135deg, rgb(30, 35, 42) 0%, rgb(30, 40, 56) 50%, rgb(30, 45, 74) 100%);
     font-family: 'Poppins', sans-serif;
 
 }
 
-.fuckCSSdivcenter{
+.Video-Center{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -26,8 +22,9 @@ body{
 iframe{
     width: 80vw;
     height: 100vh;
-    border: 1px solid white;
+    border: 1px solid rgba(255, 255, 255, 0.1);
     margin-top: 100px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
 
 }
 
