--- a/Min Side/CSS/Om MegStyles.css
+++ b/Min Side/CSS/Om MegStyles.css
@@ -65,7 +65,7 @@ footer li{
     border: 1px solid rgba(255, 255, 255, 0.1);
     border-radius: 12px;
     margin: 20px auto;
-    background-color: #2e343b;
+    background-color: rgb(46, 52, 59);
     box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
 }
 
