--- a/Skjema Side/CSS/index.css
+++ b/Skjema Side/CSS/index.css
@@ -1,12 +1,60 @@
-*{
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
+body {
+    font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    background: linear-gradient(135deg, rgb(30, 35, 42) 0%, rgb(30, 35, 42) 40%, rgb(30, 40, 56) 70%, hwb(220 12% 71%) 100%);
+    color: white;
 }
 
-iframe {
+header {
+    text-align: center;
+    padding: 20px;
+    background-color: rgb(117, 117, 117);
+    border-bottom: 2px solid  rgb(117, 117, 117);
+}
+
+h1 {
+    font-size: 2.5rem;
+    color: #fdbb2d;
+}
+
+main {
+    padding: 20px;
+    max-width: 800px;
+    margin: auto;
+}
+
+section {
+    margin-bottom: 40px;
+}
+
+h2 {
+    font-size: 1.8rem;
+    margin-bottom: 10px;
+    color: #fdbb2d;
+}
+
+form {
     display: flex;
+    gap: 10px;
     align-items: center;
-    width: 100%;
-    height: 100vh;
-    border: none;
+    margin-bottom: 20px;
+}
+
+label {
+    font-weight: bold;
+}
+
+input, select, button {
+    padding: 5px;
+    font-size: 1rem;
+    color: white;
+    background-color: rgb(117, 117, 117);
+    border: 1px solid rgb(117, 117, 117);
+    border-radius: 5px;
+}
+
+p, h1{
+    color: white;
 }
